# sdl2engine

./: .gitignore  CMakeLists.txt  README  main.c
lib/: eOOPc.h
lib/engine/: sdl2engine_types.h  sdl2engine_utils.h
lib/engine/global/: sdl2engine_global_pub.h
lib/engine/render/: sdl2engine_render_class.c  sdl2engine_render_class.h  sdl2engine_render_pub.h
src/: main.c
src/lib/: eOOPc.h  utils.h
src/lib/engine/: utils.h
src/lib/engine/config/: config_class.c  config_class.h  config_pub.h  sdl2engine_config_class.c  sdl2engine_config_class.h  sdl2engine_config_pub.h
src/lib/engine/global/: global_class.c  global_class.h  global_pub.h  sdl2engine_global_class.c  sdl2engine_global_class.h  sdl2engine_global_pub.h
src/lib/engine/input/: input_class.c  input_class.h  input_pub.h  sdl2engine_input_class.c  sdl2engine_input_class.h  sdl2engine_input_pub.h
src/lib/engine/io/: io.c  io.h  sdl2engine_io.c  sdl2engine_io.h
src/lib/engine/render/: render_class.c  render_class.h  render_pub.h  sdl2engine_render_class.c  sdl2engine_render_class.h  sdl2engine_render_pub.h
src/lib/engine/time/: sdl2engine_time_class.c  sdl2engine_time_class.h  sdl2engine_time_pub.h
src/lib/engine/timers/: timers_class.c  timers_class.h  timers_pub.h
src/lib/glad/include/glad/: glad.h
src/lib/glad/src/: glad.c
